[tool.poetry]
name = "traffic-router"
version = "0.1.0"
description = "Traffic Router Proxy"
authors = ["Feng Wang <maplerme@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.18.0"
aiohttp = "^3.8.1"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
